--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
  h1 {
-   font-family: Palatino, 'Palatino Linotype', serif;
+   font-family: Bookman, URW Bookman L, serif;
+  color: #281C56
 } 
+
