--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
  h1 {
-   font-family: Bookman, URW Bookman L, serif;
+   font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
   color: #4A561C
 } 
 
