--- a/main.css
+++ b/main.css
@@ -11,5 +11,5 @@ h4 {
  color: #4A561C;
 }
 .container {
-font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+font-family: 'Avantgarde', TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
