--- a/main.css
+++ b/main.css
@@ -10,6 +10,5 @@ h2 {
 h4 {
  color: #4A561C;
 }
-.container {
-font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+.container {font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
