change heading colors again

--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
  h1 {
-  color: #281C56;
+  color: #662A75;
 } 
 h2 {
- color: #561C2D;
+ color: #2A5E75;
 }
  h3 {
-  color: #1C5645;
+  color: #75412A;
 }
 h4 {
- color: #4A561C;
+ color: #39752A;
 }
 .container {font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
