adjust background size

--- a/main.css
+++ b/main.css
@@ -17,4 +17,5 @@ h4 {
 .container {font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
  background-image:
   url("abbeyjanicek.github.io/resume-background-pic.jpg");
+ background-size: cover;
 }
