--- a/main.css
+++ b/main.css
@@ -15,9 +15,10 @@ h4 {
  font-size: 16px;
 }
 .container {font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
- background-image:
-  url("abbeyjanicek.github.io/resume-background-pic.jpg");
+}
+ .background-image {
+  background-image: url("abbeyjanicek.github.io/resume-background-pic.jpg");
  background-size: cover;
- opacity: 0.1;
+  opacity: 0.2;
 }
  
