--- a/main.css
+++ b/main.css
@@ -17,8 +17,16 @@ h4 {
 .container {font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
 .hero-unit__background-image {
+ position: absolute;
+  z-index: -1;   
+  width: 100%;
+  height: 100%;
   background-image: url("abbeyjanicek.github.io/resume-background-pic.jpg");
- background-size: cover;
+  background-size: cover;
   opacity: 0.7;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
  
