trying to align nav bar, name, pic

--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ ul {
     padding: 0;
     width: 200px;
     background-color: #f1f1f1;
+    text-align: left;
 }
 li a {
     display: block;
@@ -68,7 +69,9 @@ li a:hover {
  text-align: center;
 }
 .resume-pic {
- text-align: right;
+    text-align: right;
+    display: block;
+    width: 40%;
 }
 .main {
  display: inline;
