--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ font-weight: 300;
 .address {
   text-align: center;
 }
-ul {
+.nav-bar {
     list-style-type: none;
     margin: 0;
     padding: 0;
